# trello2keep

./: .gitignore  .pre-commit-config.yaml  .prettierrc  CRUSH.md  README.md  ordering_instructions_sample.md  pyproject.toml
.github/: copilot-instructions.md
scripts/: setup-dev.sh
src/groceries/: main.py  trello.py
src/trello2keep/: main.py  trello.py
