[project]
name = "trello2keep"
version = "0.1.0"
description = "Extract Trello list items and create Google Keep notes"
readme = "README.md"
authors = [{ name = "Antoine Martin", email = "antoine.martin@octave.biz" }]
requires-python = ">=3.13"
dependencies = [
  "click>=8.2.1",
  "google-api-python-client>=2.177.0",
  "google-auth>=2.40.3",
  "google-auth-httplib2>=0.2.0",
  "google-auth-oauthlib>=1.2.2",
  "requests>=2.32.4",
  "pydantic-ai[logfire]>=0.0.13",
  "python-dotenv>=1.0.1",
]
license = { text = "MIT" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
]

[project.scripts]
trello2keep = "trello2keep.main:main"

[build-system]
requires = ["uv_build>=0.8.2,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "pytest>=8.4.1",
  "pytest-cov>=4.1.0",
  "black>=24.10.1",
  "isort>=5.12.0",
  "ruff>=0.7.0",
  "mypy>=1.12.0",
  "types-requests>=2.31.0",
  "pre-commit>=4.0.0",
  "bandit>=1.7.10",
  "safety>=3.2.0",
  "opentelemetry-instrumentation-httpx>=0.57b0",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
extend-select = ['Q', 'RUF100', 'C90', 'UP', 'I']
flake8-quotes = { inline-quotes = 'single', multiline-quotes = 'double' }
mccabe = { max-complexity = 15 }

[tool.ruff.format]
skip-magic-trailing-comma = false
# don't format python in docstrings, pytest-examples takes care of it
# docstring-code-format = false
quote-style = 'single'

[tool.ruff.lint.isort]
known-first-party = ["trello2keep"]
combine-as-imports = true


[tool.ruff.lint.pydocstyle]
convention = 'google'

[tool.mypy]
files = ["src", "tests"]

# AFAIK google-auth and google-api-python-client do not have type stubs
[[tool.mypy.overrides]]
module = ["google_auth_oauthlib.*"]
follow_untyped_imports = true

[[tool.mypy.overrides]]
module = ["googleapiclient.*"]
follow_untyped_imports = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]         # Skip assert_used test
